clean up gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-"config/config.json" 
-"config/config.json.heroku" 
-"config/config.json.cronos" 
-"node_modules/" 
+config/config.json
+config/config.json.heroku
+config/config.json.cronos
+node_modules/
